@@ -8,6 +8,7 @@
 ---------------------------------------------
 .: WSM: Task: Add Today special if page is a restaurant (WSM-66)
 .: WSM: BugFix: Mark as offer is not shown (WSM-102)
+.: WSM: Task: Add default shop banner image (WSM-55)
 
 ---------------------------------------------
 - 2020-06-04                                -
